h1. Changes

h2. Ruber 0.0.10

h3. Features

* Added a RI plugin. You can now insert the class or method name in the RI tool widget
  and see the documentation in a nice HTML format inside the tool widget itself.
  This plugin requires RDoc version 3.x (maybe version 2.x will also work).
* The syntax checker plugin has been rewritten. Now other plugins can check the
  syntax of a document
* Ruby and YAML syntax checker now are in their own plugin, rather than being part
  of the syntax checker plugin
* The auto end plugin doesn't use indentation to decide whether the end keyword
  should be inserted or not. It performs a syntax check instead and only inserts
  end if ruby reports a missing end keyword. This should improve the accuracy of
  the plugin
* Clicking on a file name in an output widget with the middle mouse button now
  prevents the tool widget from being hidden, as if the pin button were clicked
* Changed the interface to specify patterns in the RSpec plugin
* The RSpec plugin now supports specs inside subdirectories. You can also specify
  subdirectories inside the pattern to match code file and the respective spec
  file
* When choosing the Run Specs for Current File action in the RSpec plugin, if the current
  document is associated with a code file, all the specs associated with it are
  run (previously, only one of them was run)
* When choosing the Run Current Spec action in the RSpec plugin, if the current
  document is a code file, the plugin will look at the most recently activated
  editor containing a spec file for the current file to determine which is the
  current spec.
* The behaviour of output widgets when clicking on a file name which requires
  opening a new editor has changed. The choice made by the user to open the editor
  in the current tab by splitting the current editor is ignored if the current 
  tab already contains more than one editor. The reason is that usually there