@@ -121,10 +121,6 @@ h3. Quick Open File
 
 h3. Quick open method/class plugin
 
-h3. ri plugin
-
-h3. irb plugin
-
 h3. Konsole plugin
 
 h3. File system browser plugin
